# nhsdigital.eps-aws-dashboards

./: package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pull_request.yml  release.yml  sync_copilot.yml
_data/: dev_deployments.csv  dev_latest.csv  prod_deployments.csv  prod_latest.csv  qa_deployments.csv  qa_latest.csv  ref_deployments.csv  ref_latest.csv
release_notes/: v1.0.67-beta.md
